--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <img src="images/why.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Wahyu sani and This is i'm <span class="typing-2"></span></div>
+                    <div class="text">I'm Wahyu sani and i'm a<span class="typing-2"></span></div>
                     <p>I am 19 years old, I graduated from Vocational High School 7 Bandar Lampung majoring in software engineering. 
                        I am currently a second semester student at Lampung State Polytechnic College, in the study program 
                        informatics Management.</p>
